# django-mongodb-cli

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_REVIEW.md  LANGCHAIN_MONGODB_FIX.md  LANGCHAIN_TEST_FIX_README.md  README.md  SHELL_DEPENDENCY_MAP.md  VERIFICATION.md  WARP.md  justfile  langchain-mongodb-import-fix.patch  pyproject.toml  qe.py
config/: allauth_settings.py  filter_settings.py  rest_framework_settings.py  wagtail_apps.py  wagtail_settings.py
config/allauth/: allauth_apps.py  allauth_settings.py
config/debug_toolbar/: debug_toolbar_settings.py
config/django/: django_settings.py
config/extensions/: debug_toolbar_settings.py
config/filter/: filter_settings.py
config/rest_framework/: rest_framework_migrate.py  rest_framework_settings.py
config/wagtail/: wagtail_settings.py
demo/medical_records/: apps.py  models.py  views.py
demo/medical_records/management/commands/: create_patient.py
django_mongodb_cli/: __init__.py  app.py  config.py  createsuperuser.py  frontend.py  manage.py  proj.py  project.py  repo.py  runserver.py  settings.py  startapp.py  startproject.py  utils.py
django_mongodb_cli/templates/app_template/app_name/: admin.py  apps.py  models.py  tests.py  urls.py
django_mongodb_cli/templates/project_template/: justfile  manage.py  pyproject.toml
django_mongodb_cli/templates/project_template/project_name/: apps.py  routers.py  wsgi.py
django_mongodb_cli/templates/project_template/project_name/settings/: base.py  project_name.py  qe.py
docs/source/: conf.py  glossary.rst  index.rst  installation.rst  third-party-library-support.rst  usage.rst
docs/source/_static/: django-rest-framework.txt
docs/source/_static/logs/: django-debug-toolbar.txt  django-filter.txt
docs/source/installation/: clone-repository.rst  index.rst  usage.rst  venv.rst
docs/source/library-support/: django-allauth.rst  index.rst  known-issues.rst  project-examples.rst  test-suites.rst
docs/source/supported-libraries/: django-allauth.rst  django-debug-toolbar.rst  django-filter.rst  django-rest-framework.rst  index.rst  wagtail.rst
docs/source/third-party-library-support/: django-allauth.rst  index.rst  test-suites.rst
docs/source/third-party-library-support/supported-libraries/: django-debug-toolbar.rst  django-filter.rst  django-rest-framework.rst  index.rst  wagtail.rst
docs/source/usage/: django-mongodb-backend.rst  index.rst  installation-config.rst  repository-groups.rst  third-party.rst
jira/: INTPYTHON-527.py  INTPYTHON-808.py  PYTHON-5564.md  PYTHON-5564.py
patches/wagtail/: HeadCountRelatedModelUsingPK.patch
templates/app_template/: apps.py-tpl  views.py-tpl
templates/app_template/templates/: app_name.html
templates/home_template/: wagtail_hooks.py
templates/home_template/migrations/: 0001_initial.py  0002_create_homepage.py
templates/home_template/telepath_adapters/: bson_adapter.py
templates/project_template/project_name/: urls.py
templates/project_template/project_name/settings/: __init__.py
templates/project_template/project_name/templates/: header.html
test/HELP-72348/: HELP-72348.py  memray-flamegraph-HELP-72348.py.4949.html  memray-flamegraph-HELP-72348.py.5279.html
test/settings/: allauth.py  django.py  django_filter.py  django_migrations.py  django_mongodb_extensions.py  qe.py  rest_framework.py  wagtail.py
