[project]
name = "django-mongodb-cli"
version = "0.1.0"
dependencies = [
  "GitPython",
  "toml",
  "typer",
]

[project.scripts]
dm = "django_mongodb_cli:dm"

[project.optional-dependencies]
django-allauth = [
  "django-ninja",
  "fido2",
  "psycopg2",
  "python3-openid",
  "python3-saml",
  "pyjwt[crypto]",
  "requests-oauthlib",
]
django-debug-toolbar = [
  "django-debug-toolbar",
  "html5lib",
  "pytest-django",
]
django-filter = [
  "pytz",
]
django-rest-framework = [
  "pytest-django",
  "setuptools",
]
docs = [
  "Sphinx",
  "furo",
  "sphinx-copybutton",
]

[dependency-groups]
langchain = [
  "langchain-voyageai",
  "langchain-ollama",
  "langchain-openai",
]

[tool.django-mongodb-cli]
repos = [
  "ai-ml-pipeline-testing @ git+ssh://git@github.com/mongodb-labs/ai-ml-pipeline-testing@main",
  "django @ git+ssh://git@github.com/mongodb-forks/django@mongodb-6.0.x",
  "django-allauth @ git+ssh://git@github.com/pennersr/django-allauth@main",
  "django-debug-toolbar @ git+ssh://git@github.com/django-commons/django-debug-toolbar@main",
  "django-filter @ git+ssh://git@github.com/carltongibson/django-filter@main",
  "django-mongodb-app @ git+ssh://git@github.com/mongodb-labs/django-mongodb-app@5.2.x",
  "django-mongodb-backend @ git+ssh://git@github.com/mongodb/django-mongodb-backend@main",
  "django-mongodb-demo @ git+ssh://git@github.com/aclark4life/django-mongodb-demo@main",
  "django-mongodb-extensions @ git+ssh://git@github.com/mongodb-labs/django-mongodb-extensions@main",
  "django-mongodb-project @ git+ssh://git@github.com/mongodb-labs/django-mongodb-project@5.2.x",
  "django-mongodb-project-benchmark @ git+ssh://git@github.com/NoahStapp/django-mongodb-backend-benchmark.git@main",
  "django-mongodb-uat@ git+ssh://git@github.com/aclark4life/django-mongodb-uat@main",
  "django-rest-framework @ git+ssh://git@github.com/encode/django-rest-framework@main",
  "docs @ git+ssh://git@github.com/mongodb/docs@main",
  "docs-sample-apps @ git+ssh://git@github.com/mongodb/docs-sample-apps@main",
  "drivers-evergreen-tools @ git+ssh://git@github.com/mongodb-labs/drivers-evergreen-tools@master",
  "flask-pymongo @ git+ssh://git@github.com/mongodb-labs/flask-pymongo",
  "GenAI-Showcase @ git+ssh://git@github.com/aclark4life/GenAI-Showcase.git@main",
  "langchain-mongodb @ git+ssh://git@github.com/langchain-ai/langchain-mongodb@main",
  "libmongocrypt @ git+ssh://git@github.com/mongodb-labs/libmongocrypt@master",
  "llm-mongogpt @ git+https://https://github.com/10gen/llm-mongogpt.git",
  "llm-tools-mongodb @ git+https://https://github.com/aclark4life/llm-tools-mongodb.git",
  "mongo @ git+ssh://git@github.com/mongodb/mongo@master",
  "mongo-arrow @ git+ssh://git@github.com/mongodb-labs/mongo-arrow@main",
  "mongo-orchestration @ git+ssh://git@github.com/mongodb-labs/mongo-orchestration@master",
  "mongo-python-driver @ git+ssh://git@github.com/mongodb/mongo-python-driver@master",
  "mongodb-community-search-setup @ git+ssh://git@github.com/mongodb-js/mongodb-community-search-setup.git",
  "mongot @ git+ssh://git@github.com/10gen/mongot.git@master",
  "pymongo-auth-aws @ git+ssh://git@github.com/mongodb/pymongo-auth-aws@master",
  "pymongo-search-utils@ git+ssh://git@github.com/mongodb-labs/pymongo-search-utils@main",
  "python-webpack-boilerplate @ git+ssh://git@github.com/AccordBox/python-webpack-boilerplate@master",
  "specifications @ git+ssh://git@github.com/mongodb/specifications@master",
  "test-supercharge-action @ git+ssh://git@github.com/aclark4life/test-supercharge-action.git",
  "wagtail @ git+ssh://git@github.com/mongodb-forks/wagtail@main",
  "wagtail-mongodb-project @ git+ssh://git@github.com/mongodb-labs/wagtail-mongodb-project@main",
  "winkerberos @ git+ssh://git@github.com/mongodb-labs/winkerberos@main",
  "xmlsec @ git+ssh://git@github.com/xmlsec/python-xmlsec@main",
]
path = "src"

# Repository groups for organizing related repos
[tool.django-mongodb-cli.groups]
django = [
  "django",
  "django-mongodb-backend",
  "django-mongodb-extensions",
  "libmongocrypt",
  "mongo-python-driver",
]
langchain = [
  "ai-ml-pipeline-testing",
  "langchain-mongodb",
  "pymongo-search-utils",
  "mongodb-community-search-setup",
  "mongo-python-driver",
]
mongo-arrow = [
  "mongo-arrow",
]

# Git remote configuration for repository groups
[tool.django-mongodb-cli.remotes.django.django-mongodb-backend]
origin = "git+ssh://git@github.com/aclark4life/django-mongodb-backend"
upstream = "git+ssh://git@github.com/mongodb/django-mongodb-backend"

[tool.django-mongodb-cli.remotes.django.django-mongodb-extensions]
origin = "git+ssh://git@github.com/aclark4life/django-mongodb-extensions"
upstream = "git+ssh://git@github.com/mongodb-labs/django-mongodb-extensions"

[tool.django-mongodb-cli.remotes.langchain.mongo-python-driver]
origin = "git+ssh://git@github.com/aclark4life/mongo-python-driver"
upstream = "git+ssh://git@github.com/mongodb/mongo-python-driver"

[tool.django-mongodb-cli.remotes.langchain.langchain-mongodb]
origin = "git+ssh://git@github.com/aclark4life/langchain-mongodb"
upstream = "git+ssh://git@github.com/langchain-ai/langchain-mongodb"

[tool.django-mongodb-cli.remotes.langchain.pymongo-search-utils]
origin = "git+ssh://git@github.com/aclark4life/pymongo-search-utils"
upstream = "git+ssh://git@github.com/mongodb-labs/pymongo-search-utils"

[tool.django-mongodb-cli.remotes.mongo-arrow.mongo-arrow]
origin = "git+ssh://git@github.com/aclark4life/mongo-arrow"
upstream = "git+ssh://git@github.com/mongodb-labs/mongo-arrow"

[tool.django-mongodb-cli.install.libmongocrypt]
install_dir = "bindings/python"

[tool.django-mongodb-cli.install.mongo-arrow]
install_dir = "bindings/python"

[[tool.django-mongodb-cli.install.mongo-arrow.env_vars]]
name = "LDFLAGS"
value = "-L/opt/homebrew/opt/mongo-c-driver@1/lib"

[[tool.django-mongodb-cli.install.mongo-arrow.env_vars]]
name = "CPPFLAGS"
value = "-I/opt/homebrew/opt/mongo-c-driver@1/include"

[[tool.django-mongodb-cli.install.mongo-arrow.env_vars]]
name = "PKG_CONFIG_PATH"
value = "/opt/homebrew/opt/mongo-c-driver@1/lib/pkgconfig"

[tool.django-mongodb-cli.install.langchain-mongodb]
install_dir = "libs/langchain-mongodb"
# Optional: Install extras and PEP 735 dependency groups from pyproject.toml
# extras = ["community"]
groups = ["dev"]

[tool.django-mongodb-cli.test.langchain-mongodb]
test_command = "pytest"
test_dirs = [
  "src/langchain-mongodb/libs/langchain-mongodb/tests",
  "src/langchain-mongodb/libs/langgraph-store-mongodb/tests",
]

[tool.django-mongodb-cli.test.pymongo-search-utils]
test_command = "pytest"
test_dirs = ["src/pymongo-search-utils/tests"]

[tool.django-mongodb-cli.test.mongo-python-driver]
test_command = "just"
clone_dir = "src/mongo-python-driver"
test_dirs = ["src/mongo-python-driver/test"]

[[tool.django-mongodb-cli.test.mongo-python-driver.env_vars]]
name = "DRIVERS_TOOLS"
value = "/Users/alex.clark/Developer/django-mongodb-cli/src/drivers-evergreen-tools"

[[tool.django-mongodb-cli.test.mongo-python-driver.env_vars]]
name = "AWS_PROFILE"
value = "my-profile"

[tool.django-mongodb-cli.test.django]
test_command = "./runtests.py"
test_options = [
  "--parallel",
  "1",
  "--verbosity",
  "3",
  "--debug-sql",
  "--noinput",
]
clone_dir = "src/django"
test_dirs = ["src/django/tests", "src/django-mongodb-backend/tests"]

# [[tool.django-mongodb-cli.test.django.env_vars]]
# name = "PYMONGOCRYPT_LIB"
# value = "/opt/homebrew/lib/libmongocrypt.dylib"

# [[tool.django-mongodb-cli.test.django.env_vars]]
# name = "MONGODB_URI"
# value = "mongodb://localhost:64437/?directConnection=true"

[tool.django-mongodb-cli.test.django.migrations_dir]
source = "mongo_migrations"
target = "src/django/tests/mongo_migrations"

[tool.django-mongodb-cli.test.django.settings.test]
source = "test/settings/django.py"
# source = "test/settings/qe.py"
target = "src/django/tests/mongo_settings.py"

[tool.django-mongodb-cli.test.django.settings.migrations]
source = "test/settings/django_migrations.py"
target = "src/django/tests/mongo_settings.py"

[tool.django-mongodb-cli.test.django.settings.module]
test = "mongo_settings"
migrations = "mongo_settings"

[tool.django-mongodb-cli.test.django-filter]
test_command = "./runtests.py"
clone_dir = "src/django-filter"
test_dirs = ["src/django-filter/tests"]

[tool.django-mongodb-cli.test.django-filter.apps_file]
source = "test/apps/django_filter.py"
target = "src/django-filter/tests/mongo_apps.py"

[tool.django-mongodb-cli.test.django-filter.migrations_dir]
source = "mongo_migrations"
target = "src/django-filter/tests/mongo_migrations"

[tool.django-mongodb-cli.test.django-filter.settings.test]
source = "test/settings/django_filter.py"
target = "src/django-filter/tests/settings.py"

[tool.django-mongodb-cli.test.django-filter.settings.migrations]
source = "test/settings/django_filter.py"
target = "src/django-filter/tests/settings.py"

[tool.django-mongodb-cli.test.django-filter.settings.module]
test = "tests.settings"
migrations = "tests.settings"

[tool.django-mongodb-cli.test.django-rest-framework]
test_command = "./runtests.py"
clone_dir = "src/django-rest-framework"
test_dirs = ["src/django-rest-framework/tests"]

[tool.django-mongodb-cli.test.django-rest-framework.apps_file]
source = "test/apps/rest_framework.py"
target = "src/django-rest-framework/tests/mongo_apps.py"

[tool.django-mongodb-cli.test.django-rest-framework.migrations_dir]
source = "mongo_migrations"
target = "src/django-rest-framework/tests/mongo_migrations"

[tool.django-mongodb-cli.test.django-rest-framework.settings.test]
source = "test/settings/rest_framework.py"
target = "src/django-rest-framework/tests/conftest.py"

[tool.django-mongodb-cli.test.django-rest-framework.settings.migrations]
source = "test/settings/rest_framework_migrations.py"
target = "src/django-rest-framework/tests/conftest.py"

[tool.django-mongodb-cli.test.django-rest-framework.settings.module]
test = "tests.conftest"
migrations = "tests.conftest"

[tool.django-mongodb-cli.test.wagtail]
test_command = "./runtests.py"
clone_dir = "src/wagtail"
test_dirs = ["src/wagtail/wagtail/tests", "src/wagtail/wagtail/test"]

[tool.django-mongodb-cli.test.wagtail.apps_file]
source = "test/apps/wagtail.py"
target = "src/wagtail/wagtail/test/mongo_apps.py"

[tool.django-mongodb-cli.test.wagtail.migrations_dir]
source = "mongo_migrations"
target = "src/wagtail/wagtail/test/mongo_migrations"

[tool.django-mongodb-cli.test.wagtail.settings.test]
source = "test/settings/wagtail.py"
target = "src/wagtail/wagtail/test/mongo_settings.py"

[tool.django-mongodb-cli.test.wagtail.settings.migrations]
source = "test/settings/wagtail.py"
target = "src/wagtail/wagtail/test/mongo_settings.py"

[tool.django-mongodb-cli.test.wagtail.settings.module]
test = "wagtail.test.mongo_settings"
migrations = "wagtail.test.mongo_settings"

[tool.django-mongodb-cli.test.django-debug-toolbar]
test_command = "pytest"
clone_dir = "src/django-debug-toolbar"
test_dirs = ["src/django-debug-toolbar/tests"]

[tool.django-mongodb-cli.test.django-debug-toolbar.apps_file]
source = "test/apps/debug_toolbar.py"
target = "src/django-debug-toolbar/debug_toolbar/mongo_apps.py"

[tool.django-mongodb-cli.test.django-debug-toolbar.settings.test]
source = "test/settings/debug_toolbar.py"
target = "src/django-debug-toolbar/debug_toolbar/mongo_settings.py"

[tool.django-mongodb-cli.test.django-debug-toolbar.settings.migrations]
source = "test/settings/debug_toolbar.py"
target = "src/django-debug-toolbar/debug_toolbar/mongo_settings.py"

[tool.django-mongodb-cli.test.django-debug-toolbar.settings.module]
test = "debug_toolbar.mongo_settings"
migrations = "debug_toolbar.mongo_settings"

[tool.django-mongodb-cli.test.django-mongodb-extensions]
test_command = "pytest"
clone_dir = "src/django-mongodb-extensions"
test_dirs = ["src/django-mongodb-extensions/django_mongodb_extensions/tests"]

[tool.django-mongodb-cli.test.django-mongodb-extensions.apps_file]
source = "test/apps/django_mongodb_extensions.py"
target = "src/django-mongodb-extensions/django_mongodb_extensions/mongo_apps.py"

[tool.django-mongodb-cli.test.django-mongodb-extensions.settings.test]
source = "test/settings/django_mongodb_extensions.py"
target = "src/django-mongodb-extensions/django_mongodb_extensions/mongo_settings.py"

[tool.django-mongodb-cli.test.django-mongodb-extensions.settings.migrations]
source = "test/extensions/debug_toolbar_settings.py"
target = "src/django-mongodb-extensions/django_mongodb_extensions/mongo_settings.py"

[tool.django-mongodb-cli.test.django-mongodb-extensions.settings.module]
test = "django_mongodb_extensions.mongo_settings"
migrations = "django_mongodb_extensions.mongo_settings"

[tool.django-mongodb-cli.test.django-allauth]
test_command = "pytest"
clone_dir = "src/django-allauth"
test_dirs = [
  "src/django-allauth/allauth/usersessions/tests",
  "src/django-allauth/allauth/core/tests",
  "src/django-allauth/allauth/core/internal/tests",
  "src/django-allauth/allauth/tests",
  "src/django-allauth/allauth/mfa/recovery_codes/tests",
  "src/django-allauth/allauth/mfa/webauthn/tests",
  "src/django-allauth/allauth/mfa/totp/tests",
  "src/django-allauth/allauth/mfa/base/tests",
  "src/django-allauth/allauth/socialaccount/providers/oauth2/tests",
  "src/django-allauth/allauth/socialaccount/tests",
  "src/django-allauth/allauth/socialaccount/internal/tests",
  "src/django-allauth/allauth/templates/tests",
  "src/django-allauth/allauth/headless/usersessions/tests",
  "src/django-allauth/allauth/headless/tests",
  "src/django-allauth/allauth/headless/spec/tests",
  "src/django-allauth/allauth/headless/internal/tests",
  "src/django-allauth/allauth/headless/mfa/tests",
  "src/django-allauth/allauth/headless/socialaccount/tests",
  "src/django-allauth/allauth/headless/contrib/ninja/tests",
  "src/django-allauth/allauth/headless/contrib/rest_framework/tests",
  "src/django-allauth/allauth/headless/account/tests",
  "src/django-allauth/allauth/headless/base/tests",
  "src/django-allauth/allauth/account/tests",
  "src/django-allauth/tests"
]

[tool.django-mongodb-cli.test.django-allauth.apps_file]
source = "test/apps/allauth.py"
target = "src/django-allauth/allauth/mongo_apps.py"

[tool.django-mongodb-cli.test.django-allauth.settings.test]
source = "test/settings/allauth.py"
target = "src/django-allauth/allauth/mongo_settings.py"

[tool.django-mongodb-cli.test.django-allauth.settings.migrations]
source = "test/settings/allauth.py"
target = "src/django-allauth/allauth/mongo_settings.py"

[tool.django-mongodb-cli.test.django-allauth.settings.module]
test = "allauth.mongo_settings"
migrations = "allauth.mongo_settings"

[tool.django-mongodb-cli.test.django-allauth.migrations_dir]
source = "mongo_migrations"
target = "src/django-allauth/allauth/mongo_migrations"

[[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
name = "DRIVERS_TOOLS"
value = "/Users/alex.clark/Developer/django-mongodb-cli/src/drivers-evergreen-tools"

# [[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
# name = "MONGODB_URI"
# value = "mongodb://localhost:64437/?directConnection=true"

[[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
name = "AWS_PROFILE"
value = "my-profile"

# [[tool.django-mongodb-cli.test.django.env_vars]]
# name = "MONGODB_URI"
# value = "mongodb://localhost:64437/?directConnection=true"

[[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
name = "DRIVERS_TOOLS"
value = "/Users/alex.clark/Developer/django-mongodb-cli/src/drivers-evergreen-tools"

# [[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
# name = "MONGODB_URI"
# value = "mongodb://localhost:64437/?directConnection=true"

[[tool.django-mongodb-cli.run.mongo-python-driver.env_vars]]
name = "AWS_PROFILE"
value = "my-profile"

[[tool.django-mongodb-cli.origin.django-mongodb-backend]]
user = "aclark4life"
repo = "git+ssh://git@github.com/aclark4life/django-mongodb-backend"

[[tool.django-mongodb-cli.origin.django-mongodb-backend]]
user = "mongodb"
repo = "git+ssh://git@github.com/mongodb/django-mongodb-backend"

[tool.django-mongodb-cli.evergreen.django-mongodb-backend]
project_name = "django-mongodb"
tasks = ["run-tests"]

[tool.django-mongodb-cli.evergreen.mongo-python-driver]
project_name = "mongo-python-driver"
tasks = ["run-tests"]

# Multiple settings configurations for Django projects
# Use with: dm project run myproject --settings site1
[tool.django-mongodb-cli.project.settings.base]
path = "settings.base"

[tool.django-mongodb-cli.project.settings.qe]
path = "settings.qe"

[tool.django-mongodb-cli.project.settings.site1]
path = "settings.site1"

[tool.django-mongodb-cli.project.settings.site2]
path = "settings.site2"

[tool.setuptools]
packages = ["django_mongodb_cli", "demo"]

[tool.setuptools.package-data]
"django_mongodb_cli" = ["templates/**/*"]
