[project]
name = "example_project (overwritten by `dm project`)"
version = "0.1.0"
description = "An example Python project"
authors = [
    { name = "Your Name", email = "" },
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.19.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
